Updated home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
+
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
 <style>
     *{
     padding: 0px;
@@ -159,15 +161,15 @@ button[type='submit']{
     transition: all 0.5 ease-in-out 0.5s;
     color: black;
     text-align: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 27px;
+    font-family: 'Cinzel', serif;
+    font-size: 30px;
 }
 
 .container:hover{
     color: whitesmoke;
     text-align: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 23px;
+    font-family: 'Cinzel', serif;
+    font-size : 18px;
 }
 
 
@@ -180,8 +182,8 @@ button[type='submit']{
 
 h1.latest{
     letter-spacing: 0.02rem;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2.7rem;
+    font-family: 'Cinzel', serif;
+    font-size: 2.9rem;
     text-align: center;
     margin-top: 9vh;
     color: black;
@@ -189,10 +191,10 @@ h1.latest{
 p.ourgoal{
     letter-spacing: 0.02rem;
     font-family: 'Open Sans', sans-serif;
-    font-size: 1rem;
-    text-align: center;
+    font-size: 1.2rem;
+    text-align: justify;
     
-    color: black;
+    color: rgb(0, 0, 0);
     width: 90vw;
     margin: 6vh auto;
 }
@@ -258,8 +260,16 @@ p.ourgoal{
 
 
 
-    <h1 class="latest">our goal</h1>
-    <p class="ourgoal">Coronary Heart Disease (CHD) is the leading cause of mortality in India. This has a debilitating impact on our economy and country. The threat of CHD can be be dealt with if people are aware if they are at risk and get timely medical attention. Our goal is to use data to predict if someone is at risk.</p>
+    <h1 class="latest">Our goal</h1>
+    <p class="ourgoal">
+         Coronary Heart Disease (CHD) is the leading cause of mortality in India. 
+         This has a debilitating impact on our economy and country. 
+         The threat of CHD can be be dealt with if people are aware if they are at risk and get timely medical attention. 
+         CHD can be prevented if the issue is dealt with in time.
+         Our goal is to use data to predict if someone is at risk of CHD and assist them in getting help.
+         We believe we can save lives by simply raiseing awareness on a case by case basis. 
+         Let us achieve our goal making India a healthier country by preventing CHD.
+        </p>
     
     <div class="container" id="container1">
         TUTORIAL
