--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -1,149 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Predictor-Angino</title>
     <!-- <link rel="stylesheet" href="predictor.css"> -->
-    
+
 </head>
 <style>
-    *{
-    padding: 0px;
-    margin: 0px;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
+    * {
+        padding: 0px;
+        margin: 0px;
+        text-decoration: none;
+        list-style: none;
+        box-sizing: border-box;
+    }
 
-nav{
-    /* background-color: royalblue; */
-    height: 10vh;
-    width: 100%;
-    border-radius: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: center;
-    overflow: auto;
-}
+    nav {
+        /* background-color: royalblue; */
+        height: 10vh;
+        width: 100%;
+        border-radius: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
+        overflow: auto;
+    }
 
-div.logo{
-    align-content: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 2rem;
-    animation: text 3s 1;
-}
+    div.logo {
+        align-content: center;
+        font-family: 'Playfair Display', serif;
+        font-size: 2rem;
+        animation: text 3s 1;
+    }
 
-@keyframes text {
-    0%   {color: rgb(207, 181, 181);}
-    15%  {color: rgb(187, 199, 255);}
-    30%  {color: rgb(240, 176, 221);}
-    45%  {color: rgb(183, 231, 189);}
-    60%  {color: rgb(187, 199, 255);}
-    75%  {color: rgb(245, 210, 145);}
-    90%  {color: rgb(107, 128, 97);}
-}
+    @keyframes text {
+        0% {
+            color: rgb(207, 181, 181);
+        }
 
-nav ul{
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: center;
-}
+        15% {
+            color: rgb(187, 199, 255);
+        }
 
-nav ul li{
-    list-style: none;
-    margin: 0 4vw;
-}
+        30% {
+            color: rgb(240, 176, 221);
+        }
 
-nav ul li a{
-    font-family: 'Open Sans', sans-serif;
-    text-decoration: none;
-    color: #616161;
-    transition: all 0.5s ease-in-out 0.2s;
-}
+        45% {
+            color: rgb(183, 231, 189);
+        }
 
-nav ul li a:hover{
-    color: #9c4519;
-    /* text-decoration-color: skyblue; */
-    /* transform: scale(1.3); */
-    font-size: 1.1rem
-}
+        60% {
+            color: rgb(187, 199, 255);
+        }
 
-@media (max-width:700px) and (min-width:0px){
-    nav ul li a{
+        75% {
+            color: rgb(245, 210, 145);
+        }
+
+        90% {
+            color: rgb(107, 128, 97);
+        }
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
+    }
+
+    nav ul li {
+        list-style: none;
+        margin: 0 4vw;
+    }
+
+    nav ul li a {
         font-family: 'Open Sans', sans-serif;
         text-decoration: none;
-        font-size: 0.8rem;
         color: #616161;
         transition: all 0.5s ease-in-out 0.2s;
     }
-}
 
-header{
-    /* background-color: rgba(0, 128, 128, 0.055); */
-    /* background-image: url(https://images.unsplash.com/photo-1599557180413-b3904af41411?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80); */
-    /* background-image: url(https://images.unsplash.com/photo-1513224502586-d1e602410265?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
-    background-image: url(https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
-    background-attachment: fixed;
-    background-size: cover;
-    height: 50vh;
-    width: 100vw;
-    text-align: center;
-}
+    nav ul li a:hover {
+        color: #9c4519;
+        /* text-decoration-color: skyblue; */
+        /* transform: scale(1.3); */
+        font-size: 1.1rem
+    }
 
-header h1{
-    margin-top:2vh;
-    padding-top: 10vh;
-    vertical-align: middle;
-    color: whitesmoke;
-    /* animation: text 3s 1; */
-    font-family: 'Playfair Display', serif;
-    font-size: 80px ;
+    @media (max-width:700px) and (min-width:0px) {
+        nav ul li a {
+            font-family: 'Open Sans', sans-serif;
+            text-decoration: none;
+            font-size: 0.8rem;
+            color: #616161;
+            transition: all 0.5s ease-in-out 0.2s;
+        }
+    }
 
-}
+    header {
+        background-image: url(https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
+        background-attachment: fixed;
+        background-size: cover;
+        height: 50vh;
+        width: 100vw;
+        text-align: center;
+    }
 
-header p{
-    margin-top: 20px;
-    color: whitesmoke;
-    font-size: 2rem;
-}
+    header h1 {
+        margin-top: 2vh;
+        padding-top: 10vh;
+        vertical-align: middle;
+        color: whitesmoke;
+        /* animation: text 3s 1; */
+        font-family: 'Playfair Display', serif;
+        font-size: 80px;
 
-div.container{
-    
-    /* background-color: #507c84; */
-    margin: 10px auto;
-    margin-left: 50px;
-    /* text-align: center; */
-    padding: 10px;
-    width: 90vw;
-    height: 50vh;
-    align-content: center;
-    font-size: 1.2rem;
-    padding-left: 130px;
-    /* color: whitesmoke; */
-    margin-top: 40px;
-    margin-top: 40px;
-}
+    }
 
-div.container input{
-    margin-left: 50px;
-    align-content: center;
-    /* padding: 10px; */
-    margin: 10px;
-    margin-left: 100px;
-    /* text-align: center; */
-}
+    header p {
+        margin-top: 20px;
+        color: whitesmoke;
+        font-size: 2rem;
+    }
 
-input.sub{
-    padding: 10px;
-    border-radius: 3px;
-    background-color: rgb(242,185,0);
-    font-size: 1.1rem;
-}
+    /* FORM CSS */
+
+    input[type=number],
+    input[type=text],
+    select {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        resize: vertical;
+    }
+
+    input[type=submit] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+    div.container {
+        width:70vw;
+        margin: auto;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+
+    }
 </style>
+
 <body>
     <nav>
         <div class="logo">
@@ -165,72 +188,192 @@ input.sub{
         <button type="submit">search</button> -->
     </header>
 
+    <br>
+        <br>
     <div class="container">
+        
+        <!-- <form action="action_page.php"> -->
         <form action="">
-            Sex:<br>
-            <input type="radio" name="bpmeds" value="yes">
-            <label for="vehicle1"> Male</label><br>
-            <input type="radio" name="bpmeds" value="no">
-            <label for="vehicle2"> Female</label><br>
+            <!-- FIRST NAME -->
+            <div class="row">
+                <div class="col-25">
+                    <label for="fname">First Name</label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="fname" name="firstname" placeholder="Name">
+                </div>
+            </div>
 
-            Age: <br>
-            <input type="text"><br>
+            <!-- AGE -->
+            <div class="row">
+                <div class="col-25">
+                    <label for="age">Age</label>
+                </div>
+                <div class="col-75">
+                    <input type="number" id="age" name="age" placeholder="Age">
+                </div>
+            </div>
 
-            Current Smoker:<br>
-            <input type="radio" name="csmoker" value="yes">
-            <label for="vehicle1"> YES</label><br>
-            <input type="radio" name="csmoker" value="no">
-            <label for="vehicle2"> NO</label><br>
+            <!-- SEX -->
+            <div class="row">
+                <div class="col-25">
+                    Sex
+                </div>
+                <div class="col-75">
+                    <input type="radio" id="male" name="gender" value="male">
+                    <label for="male">Male</label> <br>
+                    <input type="radio" id="female" name="gender" value="female">
+                    <label for="female">Female</label> <br>
+                </div>
+            </div>
 
-            Cigerates Per Day: <br>
-            <input type="text"><br>
+            <!-- CURRENT SMOKER -->
+            <div class="row">
+                <div class="col-25">
+                    <br>Current Smoker
+                </div>
+                <div class="col-75">
+                    <input type="radio" id="yes" name="csmoker" value="male">
+                    <label for="yes">Yes</label> <br>
+                    <input type="radio" id="no" name="csmoker" value="female">
+                    <label for="no">No</label> <br>
+                </div>
+            </div>
 
-            Do you take blood pressure medication:<br>
-            <input type="radio" name="bpmeds" value="yes">
-            <label for="vehicle1"> YES</label><br>
-            <input type="radio" name="bpmeds" value="no">
-            <label for="vehicle2"> NO</label><br>
 
-            Have you ever had a stroke before?<br>
-            <input type="radio" name="prevalentstroke" value="yes">
-            <label for="vehicle1"> YES</label><br>
-            <input type="radio" name="prevalentstroke" value="no">
-            <label for="vehicle2"> NO</label><br>
+            <!-- NO. OF CIGERATTES -->
+            <div class="row">
+                <div class="col-25">
+                    <label for="cpd"><br>Number of Cigerattes Per Day</label>
+                </div>
+                <div class="col-75">
+                    <input type="number" id="cpd" name="cpd" placeholder="Cigerattes Per Day">
+                </div>
+            </div>
 
-            High blood pressure<br>
-            <input type="radio" name="prevalentstroke" value="yes">
-            <label for="vehicle1"> YES</label><br>
-            <input type="radio" name="prevalentstroke" value="no">
-            <label for="vehicle2"> NO</label><br>
 
-            Are you diabetic?
-            <input type="radio" name="prevalentstroke" value="yes">
-            <label for="vehicle1"> YES</label><br>
-            <input type="radio" name="prevalentstroke" value="no">
-            <label for="vehicle2"> NO</label><br>
+            <!-- BLOOD PRESSURE MEDICATIONS -->
+            <div class="row">
+                <div class="col-25">
+                    <br>Do you take blood pressure medication:
+                </div>
+                <div class="col-75">
+                    <input type="radio" id="yes" name="bpmeds" value="male">
+                    <label for="yes">Yes</label> <br>
+                    <input type="radio" id="no" name="bpmeds" value="female">
+                    <label for="no">No</label> <br>
+                </div>
 
-            Total Cholestrol Level: <br>
-            <input type="text"><br>
+                <!-- HEART STROKE BEFORE -->
+                <div class="row">
+                    <div class="col-25">
+                        <br>Have you ever had a stroke before?
+                    </div>
+                    <div class="col-75">
+                        <input type="radio" id="yes" name="stroke" value="yes">
+                        <label for="yes">Yes</label> <br>
+                        <input type="radio" id="no" name="stroke" value="no">
+                        <label for="no">No</label> <br>
+                    </div>
+                </div>
 
-            Sysbolic blood pressure: <br>
-            <input type="text"><br>
+                <!-- HEART STROKE BEFORE -->
+                <div class="row">
+                    <div class="col-25">
+                        <br>Do you have diabetes
+                    </div>
+                    <div class="col-75">
+                        <input type="radio" id="yes" name="diabete" value="yes">
+                        <label for="yes">Yes</label> <br>
+                        <input type="radio" id="yes" name="diabete" value="no">
+                        <label for="no">No</label> <br>
+                    </div>
+                </div>
 
-            Diabolic blood pressure: <br>
-            <input type="text"><br>
+                <!-- HIGH BLOOD PRESSURE -->
+                <div class="row">
+                    <div class="col-25">
+                        <br>Do you have high blood pressure
+                    </div>
+                    <div class="col-75">
+                        <input type="radio" id="yes" name="highbp" value="yes">
+                        <label for="yes">Yes</label> <br>
+                        <input type="radio" id="no" name="highbp" value="no">
+                        <label for="no">No</label> <br>
+                    </div>
+                </div>
 
-            BMI: <br>
-            <input type="text"><br>
+                <!-- TOTAL CHOLESTROL LEVEL -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname"><br>Cholestrol Level</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="clevel" name="clevel" placeholder="Cholestrol Level">
+                    </div>
+                </div>
 
-            Glucose Level Blood: <br>
-            <input type="text"><br>
+                <!-- SYSBOLIC BLOOD PRESSURE -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname">Sysbolic Blood Pressure:</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="sysbp" name="sysbp" placeholder="Sysbolic Blood Pressure">
+                    </div>
+                </div>
 
-            <input class="sub" type="submit" name="" id=""> </input>
-            
-            <!-- <input type="checkbox" name="vehicle3" value="Boat" checked>
-            <label for="vehicle3"> I have a boat</label><br><br>
-            <input type="submit" value="Submit"> -->
-          </form>
+                <!-- DIABOLIC BLOOD PRESSURE -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname">Diabolic Blood Pressure:</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="diabp" name="diabp" placeholder="Diabolic Blood Pressure">
+                    </div>
+                </div>
+
+
+                <!-- BMI -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname">BMI</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="bmi" name="bmi" placeholder="BMI">
+                    </div>
+                </div>
+
+                <!-- HEART RATE -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname">heart Rate (beats per minute)</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="bpm" name="bpm" placeholder="BMI">
+                    </div>
+                </div>
+
+                <!-- Glucose Level Blood -->
+                <div class="row">
+                    <div class="col-25">
+                        <label for="fname">Blood Glucose Level</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" id="glu" name="glu" placeholder="Glucose Level Blood">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row">
+                    <input type="submit" value="Submit">
+                </div>
+        </form>
+    </div>
+    
+    </form>
     </div>
 
 </body>
+
 </html>
