--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -277,7 +277,7 @@
                     </div>
                 </div>
 
-                <!-- HEART STROKE BEFORE -->
+                <!-- DIABETIES -->
                 <div class="row">
                     <div class="col-25">
                         <br>Do you have diabetes
@@ -313,23 +313,23 @@
                     </div>
                 </div>
 
-                <!-- SYSBOLIC BLOOD PRESSURE -->
+                <!-- SYSTOLIC BLOOD PRESSURE -->
                 <div class="row">
                     <div class="col-25">
-                        <label for="fname">Sysbolic Blood Pressure:</label>
+                        <label for="fname">Systolic Blood Pressure:</label>
                     </div>
                     <div class="col-75">
-                        <input type="text" id="sysbp" name="sysbp" placeholder="Sysbolic Blood Pressure">
+                        <input type="text" id="sysbp" name="sysbp" placeholder="Systolic Blood Pressure">
                     </div>
                 </div>
 
-                <!-- DIABOLIC BLOOD PRESSURE -->
+                <!-- DIATOLIC BLOOD PRESSURE -->
                 <div class="row">
                     <div class="col-25">
-                        <label for="fname">Diabolic Blood Pressure:</label>
+                        <label for="fname">Diastolic Blood Pressure:</label>
                     </div>
                     <div class="col-75">
-                        <input type="text" id="diabp" name="diabp" placeholder="Diabolic Blood Pressure">
+                        <input type="text" id="diabp" name="diabp" placeholder="Diastolic Blood Pressure">
                     </div>
                 </div>
 
