--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -193,7 +193,7 @@
     <div class="container">
         
         <!-- <form action="action_page.php"> -->
-        <form action="">
+        <form action="\result">
             <!-- FIRST NAME -->
             <div class="row">
                 <div class="col-25">
