made the basic forum structture

--- a/templates/result.html
+++ b/templates/result.html
@@ -114,7 +114,7 @@ to {transition: translateY(200px);}
         </ul>
     </nav>
     <div>
-        YOUR DATA IS BEING PROCESSED...
+       HI {{name}} ! YOUR DATA IS BEING PROCESSED...
     </div>
     
 </body>
