--- a/templates/forum.html
+++ b/templates/forum.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum-Angino</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
 </head>
 
 <style>
@@ -100,5 +101,54 @@ nav ul li a:hover{
             <li class="item"><a href="\forum">forum</a></li>
         </ul>
     </nav>
+    <div><h2 class="jumbotron">
+        Currently active forums: {{count}}
+        <!-- <form method="POST" action="{% url 'addInForum' %}"> -->
+            <form method="POST" action="\addInForum">
+            {% csrf_token %}
+        <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Add more</button>
+        </form>
+    </h2>
+        <div class="card-columns" style="padding: 10px; margin: 20px;"></div>
+        
+        
+        {%for forum in forums %}
+        
+            <div class="card box container">
+                <br>
+                <h5 class="card-title">
+                    <a href='{{forum.link}}'><h3>{{forum.topic}}</h3></a> 
+                    <div class="card-body container">
+                            <p>{{forum.description}}</p>
+                        </h5>
+                        <hr>
+                        <p> By: {{forum.name}}</p>
+                        <!-- email- {{forum.email}} -->
+                        <hr>     
+                        <h4>Views from other users</h4>
+                        {%for discuss in discussions%}
+                        {%for objs in discuss%}  
+                        {% if objs.forum == forum %}
+                           {{objs.discuss}}
+                           <br>
+                        {% endif %}
+                        {%endfor%}
+                        {%endfor%}
+                        <form method="POST" action="\addInDiscussion">
+                            {% csrf_token %}
+                        <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Add more</button>
+                        </form>
+                    </div>
+            </div>
+        </div>
+        <br>
+        
+        {%endfor%}
+      
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
+</html></div>
 </body>
 </html>
