--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -200,7 +200,7 @@
                     <label for="fname">First Name</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="fname" name="firstname" placeholder="Name">
+                    <input type="text" id="fname" name="fname" placeholder="Name">
                 </div>
             </div>
 
