--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -106,7 +106,7 @@ nav ul li a:hover{
         margin: 4vh;
         font-size: 1.4rem;
         color: rgb(71, 71, 88);
-        text-align: right;
+        text-align: left;
     }
 
     .container ul li{
